<resources>
    <string name="app_name">HooCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeFragTitle">Summary</string>
    <string name="MealFragTitle">Meal</string>
    <string name="GymFragTitle">Gym</string>
    <string name="ArchieveFragTitle">Profile</string>
    <string name="body_measurement_headline_weight">Weight</string>
    <string name="body_measurement_header">Body Measurement</string>
    <string name="body_measurement_Detail">View all</string>
    <string name="meals_today_header">Meals today</string>
    <string name="meals_today_customize">Customize</string>
    <string name="carbs_text">Carbs</string>
    <string name="kcals">Kcal</string>
    <string name="_620">620</string>
    <string name="_10g_left">10g left</string>
    <string name="_12g_left">12g left</string>
    <string name="fat">Fat</string>
    <string name="_5g_left">5g left</string>
    <string name="protein">Protein</string>
    <string name="burned">Burned</string>
    <string name="_1620">1620</string>
    <string name="eaten">Eaten</string>
    <string name="kcal_left">Kcal left</string>
    <string name="_1500">1500</string>
    <string name="your_diet">Your Diet</string>
    <string name="details">Details</string>
    <string name="summary_text">Summary</string>
    <string name="steps">Steps</string>
    <string name="_7500">7500</string>
    <string name="back_button_contentDes">back button</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="_789_kcal">789 Kcal</string>
    <string name="distances">Distances</string>
    <string name="_7_89_km">7.89 Km</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="menu_contentDes">menu</string>
    <string name="add_button">Add Button</string>
    <string name="_85_05">85.05</string>
    <string name="kg">kg</string>
    <string name="today_8_26_am">Today 8:26 AM</string>
    <string name="clock_icon_contentDes">clock icon</string>
    <string name="_185_cm">185 cm</string>
    <string name="_20">20%</string>
    <string name="_27_3_bmi">27.3 BMI</string>
    <string name="height">Height</string>
    <string name="body_fat">Body Fat</string>
    <string name="overweight">Overweight</string>
    <string name="your_program">My Workout</string>
    <string name="view_button_contentDes">view button</string>
    <string name="_52_min_workoutLength">Loading</string>
    <string name="workout_name_detail">Loading</string>
    <string name="next_workout">Next workout</string>
    <string name="classic_workouts_label">Classic Workouts</string>
    <string name="for_today_label">For Today</string>
    <string name="step_num_label">0</string>
    <string name="step_text_label">steps</string>
    <string name="calories_label">Calories</string>
    <string name="fire_icon">Fire icon</string>
    <string name="kcal_num_label">460.25</string>
    <string name="kcal_label">kcal</string>
    <string name="sleep_label">Sleep</string>
    <string name="sleep_icon">sleep_icon</string>
    <string name="sleep_time_label">8:32</string>
    <string name="sleep_time_currency_label">hours</string>
    <string name="water_label">Water</string>
    <string name="water_icon">water_icon</string>
    <string name="water_num_label">0</string>
    <string name="water_text_label">liters</string>
    <string name="cup_of_water">cup of water</string>
    <string name="training">Training</string>
    <string name="gym_icon">gym icon</string>
    <string name="time_on_screen">On Screen</string>
    <string name="time_onscreen_icon">Time OnScreen Icon</string>
    <string name="on_screen_num_label">1:23</string>
    <string name="on_screen_hour">hours</string>
    <string name="floating_image">floating image</string>
    <string name="walk_label">Walk</string>
    <string name="walk_icon">walk icon</string>
    <string name="username">UserName</string>
    <string name="good_morning_label">Good Morning, </string>
    <string name="workout_count">Loading...</string>
    <string name="beginner_label">Beginner</string>
    <string name="workout_count_label">5 Workouts</string>
    <string name="hello">Hello</string>
    <string name="_0">0</string>
    <string name="_100">/100</string>
    <string name="healthy_point">Healthy Point</string>
    <string name="beginner">Beginner</string>
    <string name="novice">Novice</string>
    <string name="skilled">Skilled</string>
    <string name="claim_your_daily_reward">Claim your Daily Reward</string>
    <string name="claim">Claim</string>
    <string name="recent_achievements">Recent Achievements</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="the_walking_hero">The walking hero</string>
    <string name="as_busy_as_a_bee">As busy as a bee</string>
    <string name="can_t_stop_running">Can\'t Stop Running</string>
    <string name="rank">Rank</string>
    <string name="view_leaderboard"><![CDATA[View LeaderBoard >]]></string>
    <string name="_98">98</string>
    <string name="_1000">/1000</string>
    <string name="world_wides">World Wides</string>
    <string name="_7">7</string>
    <string name="_50">/50</string>
    <string name="friends">Friends</string>
    <string name="claim_your_rank_reward">Claim your Rank Reward</string>
    <string name="user_name">User Name</string>
    <string name="animation_exercise_text_detail">Loading...</string>
    <string name="second_text_detail_animation_exercise" />
    <string name="view_leader_board">View Leader Board</string>
    <string name="novice_gymer">Novice Gymer</string>
    <string name="intermidiate_runner">Intermidiate Runner</string>
    <string name="healthy_lifestyle">Healthy Lifestyle</string>
    <string name="strongest_man">Strongest Man</string>
    <string name="_12_10_2021">12/10/2021</string>
    <string name="_2_9_2021">2/9/2021</string>
    <string name="skilled_gymer">Skilled Gymer</string>
    <string name="_97">97</string>
    <string name="_80">80</string>
    <string name="username2">Username2</string>
    <string name="_02">02</string>
    <string name="username10">Username10</string>
    <string name="_40">40</string>
    <string name="_10">10</string>
    <string name="_03">03</string>
    <string name="_05">05</string>
    <string name="_74">74</string>
    <string name="username5">Username5</string>
    <string name="_69">69</string>
    <string name="_06">06</string>
    <string name="username6">Username6</string>
    <string name="_66">66</string>
    <string name="_07">07</string>
    <string name="username7">Username7</string>
    <string name="_65">65</string>
    <string name="_08">08</string>
    <string name="username8">Username8</string>
    <string name="_60">60</string>
    <string name="_09">09</string>
    <string name="username9">Username9</string>
    <string name="_55">55</string>
    <string name="username4">Username4</string>
    <string name="_04">04</string>
    <string name="_76">76</string>
    <string name="intermediate_label">Intermediate</string>
    <string name="advanced_label">Advanced</string>
    <string name="steps_label">STEPS</string>
    <string name="_2000_ml">(~2000 ml)</string>
    <string name="_8_cups">8 cups </string>
    <string name="most_people_need">Most people need </string>
    <string name="done">Done</string>
    <string name="plus_button">plus button</string>
    <string name="set_your_daily_goal">SET YOUR DAILY GOAL</string>
    <string name="cups">Cups</string>
    <string name="a_day">a day.</string>
    <string name="_8">8</string>
    <string name="set_up_goal">SET A GOAL</string>
    <string name="_12_november">12 November</string>
    <string name="recommend">Recommend</string>
    <string name="custom">Custom</string>
    <string name="steps_day">steps/day</string>
    <string name="_5000">5000</string>
    <string name="_8000">8000</string>
    <string name="_15000">15000</string>
    <string name="_2500">2500</string>
    <string name="time_onscreen">Time OnScreen</string>
    <string name="facebook_app_id">2936687149939835</string>
    <string name="fb_login_protocol_scheme">fb2936687149939835</string>
    <string name="recommanded_use_smartphone_less_3_hours_a_day">Recommanded: Only use smartphone less 3 hours/day</string>
    <string name="setting_hoocare"><![CDATA[Setting -> HooCare]]></string>
    <string name="enable_usage_access_in">Enable Usage Access in</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="recommand_sleep_more_than_8_hours_day">Recommand sleep more than 8 hours/day</string>
    <string name="hours">Hours</string>
    <string name="set_your_sleep_time">Set your sleep time</string>
    <string name="most_people_sleep">Most people sleep</string>
    <string name="_8_hours">8 Hours</string>
    <string name="bed_time">Bed Time</string>
    <string name="wake_time">Wake Time</string>
    <string name="workout_completed">Workout completed</string>
    <string name="congrat">Congrat</string>
    <string name="kcal">Kcal :</string>
    <string name="choose_workout_below_and_start_now">Choose workouts from below</string>
    <string name="duration">Duration</string>
    <string name="no_workout_history">No Workout History</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="your_name">Your Name</string>
    <string name="complete_your_infomation">Complete Your Infomation</string>
    <string name="skip">Skip</string>
    <string name="set_your_date_of_birth">Set your date of birth</string>
    <string name="set_your_gender">Set your gender</string>
    <string name="set_your_sleep_goal_to_track_your_sleep_time">Set your sleep goal to track your sleep time</string>
    <string name="set_sleep_goal">Set Sleep Goal</string>
    <string name="choose_time_to_sleep">Choose time to sleep</string>
    <string name="back_button"><![CDATA[<]]></string>
    <string name="forward_button"><![CDATA[>]]></string>
    <string name="this_week">This Week</string>

</resources>