<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".GymFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/exercises_plan_title_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/your_program"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/body_measurement_Detail"
                android:textColor="@color/lime_200"
                android:textSize="16sp" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/workout_cardview"
            android:layout_width="350dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/exercises_plan_title_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/exercise_plan_background_gymfrag">

            <TextView
                android:id="@+id/workout_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_workout"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/workout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/workout_headline"
                android:textColor="@color/white"
                android:text="@string/workout_name_detail"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                tools:ignore="RelativeOverlap,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/clockIcon"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/clock_icon_contentDes"
                    android:src="@drawable/today_timeline_icon_mealfrag" />

                <TextView
                    android:id="@+id/weight_updatetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/_52_min_workoutLength"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_exercises"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/view_button_contentDes"
                android:backgroundTint="@color/white"
                app:shapeAppearance="@style/MyFabStyle"
                app:fabCustomSize="40dp"
                app:maxImageSize="24dp"
                android:tint="@color/lime_200"
                android:src="@drawable/play_arrow_fab_gymfrag" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/classic_workout_title_linear"
            app:layout_constraintTop_toBottomOf="@id/workout_cardview"
            android:layout_below="@id/workout_cardview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/classic_workouts_label"
                android:textSize="19sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/classic_workout_detail"
            app:layout_constraintTop_toBottomOf="@id/classic_workout_title_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="20dp"
            android:elevation="8dp"
            android:layout_below="@id/classic_workout_title_linear">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/num_of_workout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_count_label"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/classic_workout_title"
                    android:layout_below="@id/num_of_workout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/beginner_label"
                    android:textStyle="bold"
                    android:textSize="25sp" />
                <ListView
                    android:id="@+id/classic_workout_listview"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_below="@id/classic_workout_title">

                </ListView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <Space
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/classic_workout_detail"
            android:layout_height="200dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>