<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/bottom_sheet_container_step_count"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:background="@drawable/gym_fragment_rounded_corner_background">

    <ImageView
        android:id="@+id/grey_blank_view"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/grey_rounded_corner_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/title_step_count_more_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/set_your_daily_goal"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/grey_blank_view" />

    <LinearLayout
        android:id="@+id/tab_bar_step_count_more_backgound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tab_bar_step_count_more">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_animation_view"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="40dp"
                android:layout_height="5dp"
                android:background="@drawable/anim_sliding_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/video_title_backgound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_bar_step_count_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title_step_count_more_option">

        <TextView
            android:id="@+id/animation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recommend"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/custom"
            android:textColor="#7E7E7E"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>